--- a/styles/style.css
+++ b/styles/style.css
@@ -1,65 +1,71 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto Mono", monospace;
-  min-height: 854px;
-  //background-image: url("https://www.alura.com.br/assets/img/imersoes/dev-2021/dia-2-calculadora-certa.png");
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Mitr", sans-serif;
+  background-image: url("../images/landscape-2.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .container {
-  text-align: center;
-  padding: 20px;
-  height: 100vh;
-}
-
-.page-title {
-  color: #ffffff;
-  margin: 0 0 20px;
-}
-
-.calculator {
-  width: 250px;
-  margin: 0 auto;
-  padding: 8px 5px;
+  width: 300px;
+  padding: 12px;
   border: 2px solid #848484;
   border-radius: 8px;
 }
 
-.calc-display {
+.display {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   background-color: #fff;
-  padding: 3px;
   text-align: right;
-  height: 46.4px;
-  border-radius: 3px;
+  height: 50px;
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
 
-.calc-display p,
-.calc-display h2 {
+.display__last-text,
+.display__main-text {
   margin: 0;
 }
 
-.calc-display p {
+.display__last-text {
   font-size: 0.9em;
 }
 
-.btn-list {
-  height: 300px;
+.calculator-grid {
   display: grid;
-  grid-template-columns: 1.066fr 1.066fr 1.066fr 0.8fr;
-  grid-template-rows: 0.6fr 1.1fr 1.1fr 1.1fr 1.1fr;
-  gap: 5px;
-  margin: 15px 0 0;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  /* grid-template-areas:
+    "display display display display"
+    "btn btn btn btn"
+    "btn btn btn btn"
+    "btn btn btn btn"
+    "btn btn btn btn"
+    "btn btn btn btn"; */
+  gap: 6px;
+  margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.btn-list button {
+/* .calculator-grid__item {
+  grid-area: btn;
+} */
+
+/* .calculator-grid__item:first-child {
+  grid-area: display;
+} */
+
+.btn {
   width: 100%;
   height: 100%;
   cursor: pointer;
@@ -69,7 +75,7 @@ body {
   border-radius: 5px;
 }
 
-.btn-list button:hover {
+.btn:hover {
   background-color: #9c9c9c;
   color: #fff;
 }
