--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-  width: 300px;
+  width: 270px;
   padding: 12px;
   border: 2px solid #848484;
   border-radius: 8px;
@@ -23,10 +23,10 @@ body {
 .display {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   background-color: #fff;
   text-align: right;
-  height: 50px;
+  height: 72px;
   border-radius: 8px;
   margin-bottom: 10px;
 }
@@ -37,7 +37,11 @@ body {
 }
 
 .display__last-text {
-  font-size: 0.9em;
+  font-size: 1em;
+}
+
+.display__main-text {
+  font-size: 1.5em;
 }
 
 .calculator-grid {
@@ -67,12 +71,10 @@ body {
 
 .btn {
   width: 100%;
-  height: 100%;
+  height: 45px;
   cursor: pointer;
-  font-family: "Roboto Mono", monospace;
-  font-size: 18px;
-  font-weight: 900;
-  border-radius: 5px;
+  font-size: 24px;
+  border-radius: 8px;
 }
 
 .btn:hover {
@@ -80,7 +82,7 @@ body {
   color: #fff;
 }
 
-.eq {
+.equal {
   background-color: #3c86f9;
   color: #fff;
 }
